[gd_scene load_steps=21 format=3 uid="uid://drcm6lc2w37br"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_573p5"]
[ext_resource type="Texture2D" uid="uid://byubok773wow" path="res://assets/ui/uiborders.png" id="1_lo72j"]
[ext_resource type="Theme" uid="uid://dplwrcgvyhpcw" path="res://assets/ui_theme.tres" id="2_cq5vu"]
[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="3_mre7y"]
[ext_resource type="Script" path="res://scripts/ui/controls_menu.gd" id="4_46yd0"]
[ext_resource type="Script" path="res://scripts/ui/settings_menu.gd" id="6_x0hft"]
[ext_resource type="Script" path="res://scripts/ui/credits_menu.gd" id="7_ho5ee"]
[ext_resource type="FontFile" uid="uid://bguvi2je1ofym" path="res://assets/fonts/FiraSans-Bold.ttf" id="7_ow5pn"]
[ext_resource type="Texture2D" uid="uid://bh8n2amxfxwrl" path="res://assets/ui/left_arrow.png" id="10_5rvr4"]
[ext_resource type="Texture2D" uid="uid://bl74crcgta3ih" path="res://assets/ui/right_arrow.png" id="11_cmifa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h8b51"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fhv12"]
bg_color = Color(0, 0, 0, 0.901961)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nkbwf"]
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_chpcr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6joks"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a2ch4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ugvq2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e0751"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mibgy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_veihl"]

[node name="pauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 5
script = ExtResource("1_573p5")

[node name="pauseUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_cq5vu")

[node name="pauseBg" type="Panel" parent="pauseUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"pauseBg"

[node name="pauseMargin" type="MarginContainer" parent="pauseUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 16

[node name="pauseBorder" type="Panel" parent="pauseUI/pauseMargin"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"topBotPanel"

[node name="panelMargin" type="MarginContainer" parent="pauseUI/pauseMargin/pauseBorder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="pauseUI/pauseMargin/pauseBorder/panelMargin"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="topRow" type="Panel" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_type_variation = &"botPanel"

[node name="topRowMargin" type="MarginContainer" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/topRow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 16

[node name="sarpedon" type="Label" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/topRow/topRowMargin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
theme_override_font_sizes/font_size = 32
text = "Σαρπηδών"
horizontal_alignment = 1
vertical_alignment = 1

[node name="whiteBorder" type="TextureRect" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/topRow"]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("1_lo72j")
stretch_mode = 1

[node name="menuPanel" type="Panel" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_h8b51")

[node name="mainMenu" type="Control" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_mre7y")

[node name="mainMenuButtons" type="VBoxContainer" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/mainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2
alignment = 1

[node name="resumeButton" type="Button" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/mainMenu/mainMenuButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Resume"

[node name="settingsButton" type="Button" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/mainMenu/mainMenuButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Settings"

[node name="controlsButton" type="Button" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/mainMenu/mainMenuButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Controls"

[node name="creditsButton" type="Button" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/mainMenu/mainMenuButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Credits"

[node name="quitButton" type="Button" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/mainMenu/mainMenuButtons"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="controlsMenu" type="Control" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_46yd0")

[node name="controlsVbox" type="VBoxContainer" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/controlsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2

[node name="firstRow" type="HBoxContainer" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/controlsMenu/controlsVbox"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="actionText" type="Label" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/controlsMenu/controlsVbox/firstRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 2.0
theme_type_variation = &"uiLabel"
theme_override_styles/normal = SubResource("StyleBoxFlat_fhv12")
text = "ACTION"
horizontal_alignment = 1
vertical_alignment = 1

[node name="actionText2" type="Label" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/controlsMenu/controlsVbox/firstRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 1.2
theme_type_variation = &"uiLabel"
theme_override_styles/normal = SubResource("StyleBoxFlat_fhv12")
text = "INPUT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="remapScroll" type="ScrollContainer" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/controlsMenu/controlsVbox"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="remapVbox" type="VBoxContainer" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/controlsMenu/controlsVbox/remapScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="settingsMenu" type="Control" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_x0hft")

[node name="ScrollContainer" type="ScrollContainer" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="settingsVbox" type="VBoxContainer" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 2

[node name="sensitivitySlider" type="Panel" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox"]
clip_contents = true
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/sensitivitySlider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="VBoxContainer" type="HBoxContainer" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/sensitivitySlider/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/sensitivitySlider/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"clearUILabel"
text = "Sensitivity"

[node name="MarginContainer" type="MarginContainer" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/sensitivitySlider/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="sensSlider" type="HSlider" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/sensitivitySlider/MarginContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 50.0

[node name="audioSlider" type="Panel" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox"]
clip_contents = true
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/audioSlider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="VBoxContainer" type="HBoxContainer" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/audioSlider/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/audioSlider/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"clearUILabel"
text = "Sound Volume
"

[node name="MarginContainer" type="MarginContainer" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/audioSlider/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="audio" type="HSlider" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/audioSlider/MarginContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="musicSlider" type="Panel" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox"]
clip_contents = true
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/musicSlider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="VBoxContainer" type="HBoxContainer" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/musicSlider/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/musicSlider/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"clearUILabel"
text = "Music Volume"

[node name="MarginContainer" type="MarginContainer" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/musicSlider/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="music" type="HSlider" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/settingsMenu/ScrollContainer/settingsVbox/musicSlider/MarginContainer2/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="creditsMenu" type="Control" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_ho5ee")

[node name="creditsBg" type="ColorRect" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/creditsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.901961)

[node name="HBoxContainer" type="HBoxContainer" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/creditsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/creditsMenu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/normal_font = ExtResource("7_ow5pn")
theme_override_font_sizes/normal_font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_nkbwf")
theme_override_styles/normal = SubResource("StyleBoxEmpty_nkbwf")
text = "Game Design, Programming, Story, Writing- 
Colby Bird

Music - Someone

Sounds - Pixabay et al.

Testers - Family and Friends

"

[node name="artDetails" type="Control" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/creditsMenu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="gallery" type="VBoxContainer" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/creditsMenu/HBoxContainer/artDetails"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/creditsMenu/HBoxContainer/artDetails/gallery"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8

[node name="artImage" type="TextureRect" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/creditsMenu/HBoxContainer/artDetails/gallery/MarginContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/creditsMenu/HBoxContainer/artDetails/gallery"]
layout_mode = 2
size_flags_vertical = 3

[node name="leftButton" type="Button" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/creditsMenu/HBoxContainer/artDetails/gallery/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_chpcr")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_chpcr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_chpcr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_chpcr")
theme_override_styles/normal = SubResource("StyleBoxEmpty_chpcr")
icon = ExtResource("10_5rvr4")
flat = true
icon_alignment = 1

[node name="artLabel" type="Button" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/creditsMenu/HBoxContainer/artDetails/gallery/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_6joks")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_a2ch4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ugvq2")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_e0751")
theme_override_styles/normal = SubResource("StyleBoxEmpty_mibgy")
flat = true
text_overrun_behavior = 3
clip_text = true

[node name="rightButton" type="Button" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/creditsMenu/HBoxContainer/artDetails/gallery/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_veihl")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_veihl")
theme_override_styles/hover = SubResource("StyleBoxEmpty_veihl")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_veihl")
theme_override_styles/normal = SubResource("StyleBoxEmpty_veihl")
icon = ExtResource("11_cmifa")
flat = true
icon_alignment = 1

[node name="openGallery" type="Button" parent="pauseUI/pauseMargin/pauseBorder/panelMargin/VBoxContainer/menuPanel/creditsMenu/HBoxContainer/artDetails"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "OPEN SOURCED 
ART GALLERY
(SPOILERS)"
flat = true
